[package]
name= "team489"
version = "0.1.0"
authors=["Praveen Kumar Vadlamani <praveenpp2929@gmail.com>"]
readme = "README.md"
repository = "https://gitlab.rrze.fau.de/wrv/AISysProj/ss24/a1.2-play-fauhalma/team489"

[dependencies]
reqwest = { version = "*", features = ["blocking", "json"] }
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
serde = { version = "*", features = ["derive"] }
serde_json = "1.0.117"
rand = "*"
num-traits = "*"
once_cell = "1.19.0"
geo = "*"